Bugfix 5217 The last field box  not fully visible in the Data Type editor

--- a/Website/Composite/styles/default/tabboxes.less
+++ b/Website/Composite/styles/default/tabboxes.less
@@ -2,8 +2,10 @@ ui|tabbox {
 	display: block;
 	overflow: hidden;
 
-	ui|tabbox { // usage: Edit Data Type -> Fields -> Tabs
-		padding-top: 39px;
+	ui|tabbox.tabsontop { // usage: Edit Data Type -> Fields -> Tabs
+		ui|tabs{
+			padding-top: 39px;
+		}
 	}
 }
 
